Added enroll button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/browse"
-            android:id="@+id/button1" />
+            android:id="@+id/browseButton" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/camera"
-            android:id="@+id/button2" />
+            android:id="@+id/cameraButton" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/enroll"
+            android:id="@+id/enrollButton" />
     </LinearLayout>
 
 
