Implemented ability to enroll faces and then recognise them when presented with a new photo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enroll"
-            android:id="@+id/enrollButton" />
+            android:text="@string/add_person"
+            android:id="@+id/addButton" />
     </LinearLayout>
 
 
